# cpp_robotics

Chapter10/: README.md  pyproject.toml  setup.py
Chapter10/tests/: vector.py
chapter1/: CMakeLists.txt  main.cpp
chapter10/: README.md
chapter10/src/: vector.cpp
chapter5/: CMakeLists.txt
chapter5/src/: car.cpp  car.h  lorry.cpp  lorry.h  main.cpp
chapter6/: CMakeLists.txt
chapter6/src/: main.cpp  matrix.cpp  matrix.h
chapter7/exe/: CMakeLists.txt
chapter7/exe/src/: main.cpp
chapter7/lib/: CMakeLists.txt
chapter7/lib/src/: matrix.cpp  matrix.h
chapter7/lib/src/c/: c_api.cpp  c_api.h
chapter8/: CMakeLists.txt  README.md
chapter8/src/: main.cpp  random.cpp  window.cpp  window.h
chapter9/: CMakeLists.txt
chapter9/src/: main.cpp  vector3d.h
